syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.platform.api.server.grpc.protobuf.catalog";

import "google/protobuf/empty.proto";

package catalog;

service ProductService {
  rpc ListProduct (ListProductRequestProto) returns (ListProductResponseProto) {};
}

message ListProductRequestProto {
  repeated int32 id = 1;
}

message ProductProto {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ListProductResponseProto {
  repeated ProductProto product = 1;
}
