syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.platform.grpc.protobuf.product";

import "google/protobuf/empty.proto";

package product;

service ProductService {
  rpc ListProductBulk (ListProductBulkRequestProto) returns (ListProductBulkResponseProto) {};
}

message ListProductBulkRequestProto {
  repeated int32 id = 1;
}

message ProductProto {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ListProductBulkResponseProto {
  repeated ProductProto product = 1;
}
